--- a/dendron.yml
+++ b/dendron.yml
@@ -82,6 +82,9 @@ preview:
     enableKatex: true
     automaticallyShowPreview: false
 publishing:
+    siteUrl: https://ccamara.github.io
+    siteRootDir: docs
+    assetsPrefix: /dendron-demo
     enableFMTitle: true
     enableNoteTitleForLink: true
     enableMermaid: true
@@ -91,7 +94,6 @@ publishing:
     siteHierarchies:
         - root
     writeStubs: false
-    siteRootDir: docs
     seo:
         title: Dendron
         description: Personal Knowledge Space
